[package]
name = "calendar"
version = "0.1.0"
authors = ["komi <yukke.konan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
serde = "1.0.114"
chrono = { version = "0.4.13", features = ["serde"] }
r2d2 = "0.8.9"
